--- a/packages/material/scss/input/_theme.scss
+++ b/packages/material/scss/input/_theme.scss
@@ -1,2 +1,18 @@
 @import "~@progress/kendo-theme-default/scss/input/_theme.scss";
 
+//Input ripple
+.k-input-solid,
+.k-input-flat,
+.k-picker-solid,
+.k-picker-flat {
+
+    &::after {
+        background-color: $primary;
+    }
+
+    &.k-state-invalid::after,
+    &.k-invalid::after {
+        background-color: $error;
+        transition: none;
+    }
+}
