--- a/packages/material/scss/panelbar/_variables.scss
+++ b/packages/material/scss/panelbar/_variables.scss
@@ -5,6 +5,7 @@ $panelbar-font-family: $font-family !default;
 $panelbar-font-size: $font-size !default;
 $panelbar-line-height: (20 / 14) !default;
 $panelbar-border-width: 1px !default;
+$panelbar-border-style: solid !default;
 $panelbar-item-border-width: 1px !default;
 $panelbar-item-border-style: solid !default;
 
