fix(switch): switch should accept k-rtl modifier

--- a/packages/default/scss/switch/_layout.scss
+++ b/packages/default/scss/switch/_layout.scss
@@ -142,6 +142,7 @@
     // RTL
     .k-switch[dir="rtl"],
     [dir="rtl"] .k-switch,
+    .k-switch.k-rtl,
     .k-rtl .k-switch {
 
         .k-switch-thumb {
