fix(input): ensure outline input and picker use the same border-color

--- a/packages/bootstrap/scss/input/_variables.scss
+++ b/packages/bootstrap/scss/input/_variables.scss
@@ -126,7 +126,7 @@ $kendo-picker-disabled-shadow: null !default;
 
 $kendo-picker-outline-bg: transparent !default;
 $kendo-picker-outline-text: $kendo-button-text !default;
-$kendo-picker-outline-border: $kendo-picker-outline-text !default;
+$kendo-picker-outline-border: rgba($kendo-picker-outline-text, .5) !default;
 
 $kendo-picker-outline-hover-bg: $kendo-button-text !default;
 $kendo-picker-outline-hover-text: $body-bg !default;
