--- a/tests/layout/hstack.html
+++ b/tests/layout/hstack.html
@@ -70,28 +70,28 @@
             <div class="k-hstack k-align-items-start">
                 <div class="box">Box</div>
                 <div class="box">Box</div>
-                <div class="box" style="height: 50px">Box</div>
+                <div class="box" style="height: 50px;">Box</div>
             </div>
         </section>
         <section>
             <div class="k-hstack k-align-items-center">
                 <div class="box">Box</div>
                 <div class="box">Box</div>
-                <div class="box" style="height: 50px">Box</div>
+                <div class="box" style="height: 50px;">Box</div>
             </div>
         </section>
         <section>
             <div class="k-hstack k-align-items-end">
                 <div class="box">Box</div>
                 <div class="box">Box</div>
-                <div class="box" style="height: 50px">Box</div>
+                <div class="box" style="height: 50px;">Box</div>
             </div>
         </section>
         <section>
             <div class="k-hstack k-align-items-stretch">
                 <div class="box">Box</div>
                 <div class="box">Box</div>
-                <div class="box" style="height: 50px">Box</div>
+                <div class="box" style="height: 50px;">Box</div>
             </div>
         </section>
         <span>pack start</span>
