fix(color-picker): reduce horizontal padding of inputs, so value is almost never clipped

--- a/packages/default/scss/colorgradient/_layout.scss
+++ b/packages/default/scss/colorgradient/_layout.scss
@@ -136,6 +136,9 @@
         }
 
         .k-input-inner {
+            padding-inline-start: 2px;
+            padding-inline-end: 2px;
+            text-align: center;
             text-overflow: clip;
         }
     }
