--- a/packages/material/scss/toolbar/_theme.scss
+++ b/packages/material/scss/toolbar/_theme.scss
@@ -7,6 +7,13 @@
         .k-button-solid-base {
             background-color: try-shade( $kendo-button-bg );
             border-color: try-shade( $kendo-button-bg );
+
+            &.k-input-button,
+            &.k-input-spinner .k-spinner-increase,
+            &.k-input-spinner .k-spinner-decrease {
+                background: none;
+                border-color: transparent;
+            }
         }
 
     }
