fix(input): remove child button border for flat input and pickers

--- a/packages/material/scss/input/_layout.scss
+++ b/packages/material/scss/input/_layout.scss
@@ -13,6 +13,7 @@
         .k-input-spinner .k-spinner-increase,
         .k-input-spinner .k-spinner-decrease {
             background: none;
+            border-color: transparent;
         }
     }
 
@@ -24,6 +25,7 @@
         .k-input-spinner .k-spinner-increase,
         .k-input-spinner .k-spinner-decrease {
             background: none;
+            border-color: transparent;
         }
 
         &:disabled,
