chore(multiviewcalendar): disable outline of focused element telerik/kendo#15502

--- a/packages/default/scss/calendar/_layout.scss
+++ b/packages/default/scss/calendar/_layout.scss
@@ -408,6 +408,7 @@
         .k-calendar-view {
             width: auto;
             white-space: nowrap;
+            outline: 0;
 
             &::after {
                 display: none;
