chore: update sass-build to allow tilde imports for dart sass

--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -1,1 +1,6 @@
+// Dependencies
+@use "~@progress/kendo-font-icons/scss/index.scss" with ( $ki-embed-font: true );
+@use "~@progress/kendo-theme-utils/scss/all.scss";
+
+
 @use "button";
