--- a/packages/fluent/scss/button/index.scss
+++ b/packages/fluent/scss/button/index.scss
@@ -1,1 +1,25 @@
-.k-no-such-selector { color: #ff0000; }
+// Module meta
+$_kendo-module-meta: (
+    name: "button",
+    dependencies: (
+        "icon"
+    )
+);
+
+
+// Component
+@forward "_variables.scss";
+@use "_layout.scss" as *;
+@use "_theme.scss" as *;
+
+// Register
+@use "../core/module-system" as module;
+@include module.register( $_kendo-module-meta... );
+
+// Expose
+@mixin styles() {
+    @include module.render( "button" ) {
+        @include kendo-button--layout();
+        @include kendo-button--theme();
+    }
+}
