fix: make the -chip-spacing to be overwrittable #3665

--- a/packages/bootstrap/scss/chip/_variables.scss
+++ b/packages/bootstrap/scss/chip/_variables.scss
@@ -5,7 +5,7 @@
 $kendo-chip-border-width: 1px !default;
 /// The spacing between the text and the icons of the chip.
 /// @group chip
-$kendo-chip-spacing: map-get( $spacing, 1 );
+$kendo-chip-spacing: map-get( $spacing, 1 ) !default;
 
 /// Horizontal padding of the chip.
 /// @group chip
