chore(fluent): setup core module functions, mixins and helpers

--- a/packages/fluent/scss/core/_index.scss
+++ b/packages/fluent/scss/core/_index.scss
@@ -1,5 +1,17 @@
+// Functions
+@forward "functions";
+
+// Variables
+@forward "variables";
+
+// Mixins
+@forward "mixins";
+
+// Helpers
+@use "helpers";
+
+// Module System
 @use "module-system/" as module;
-@use "_layout.scss";
 
 $config: null !default;
 
