fix(calendar): remove outline at focus state
* related telerik/kendo#15502
* related #3653

--- a/packages/default/scss/calendar/_layout.scss
+++ b/packages/default/scss/calendar/_layout.scss
@@ -408,10 +408,13 @@
         .k-calendar-view {
             width: auto;
             white-space: nowrap;
-            outline: 0;
 
             &::after {
                 display: none;
+            }
+
+            &:focus {
+                outline: 0;
             }
         }
 
